--- a/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/Dungeons/BrayfloxsLongstop_Hard.json
+++ b/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/Dungeons/BrayfloxsLongstop_Hard.json
@@ -1,12 +1,15 @@
 {
   "Version": 1,
   "Name": "Brayflox's Longstop",
+  "InternalName": "BrayfloxsLongstopHard",
   "Difficulty": 1,
   "Type": 0,
   "Expansion": 0,
   "Level": 50,
   "UnlockQuestID": 66947,
-  "TerritoryIDs": [362],
+  "TerritoryIDs": [
+    362
+  ],
   "Sections": [
     {
       "Type": 0,
