--- a/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/Dungeons/CastrumMeridianum.json
+++ b/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/Dungeons/CastrumMeridianum.json
@@ -1,12 +1,15 @@
 {
   "Version": 1,
   "Name": "Castrum Meridianum",
+  "InternalName": "CastrumMeridianum",
   "Difficulty": 0,
   "Type": 0,
   "Expansion": 0,
   "Level": 50,
   "UnlockQuestID": 66672,
-  "TerritoryIDs": [1043],
+  "TerritoryIDs": [
+    1043
+  ],
   "Sections": [
     {
       "Type": 0,
