--- a/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/Dungeons/CopperbellMines_Hard.json
+++ b/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/Dungeons/CopperbellMines_Hard.json
@@ -1,12 +1,15 @@
 {
   "Version": 1,
   "Name": "Copperbell Mines",
+  "InternalName": "CopperbellMinesHard",
   "Difficulty": 1,
   "Type": 0,
   "Expansion": 0,
   "Level": 50,
   "UnlockQuestID": 66752,
-  "TerritoryIDs": [349],
+  "TerritoryIDs": [
+    349
+  ],
   "Sections": [
     {
       "Type": 0,
