--- a/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/Dungeons/Sastasha_Hard.json
+++ b/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/Dungeons/Sastasha_Hard.json
@@ -1,12 +1,15 @@
 {
   "Version": 1,
   "Name": "Sastasha",
+  "InternalName": "SastashaHard",
   "Difficulty": 1,
   "Type": 0,
   "Expansion": 0,
   "Level": 50,
   "UnlockQuestID": 65630,
-  "TerritoryIDs": [387],
+  "TerritoryIDs": [
+    387
+  ],
   "Sections": [
     {
       "Type": 0,
