--- a/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/Trials/TheHowlingEye.json
+++ b/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/Trials/TheHowlingEye.json
@@ -6,11 +6,13 @@
   "Expansion": 0,
   "Level": 44,
   "UnlockQuestID": 66055,
-  "TerritoryIDs": [1047],
+  "TerritoryIDs": [
+    1047
+  ],
   "Bosses": [
     {
       "Name": "Garuda",
-      "Strategy": "In the first phase, tank should pull Garuda to 1 edge of the boss room, away from the stone pillars. Ranged damage dealers and healers should spread out a bit to minimize the damage taken from Friction. While Slipstream does not have an indicator, it can still be dodged. Players should not let Garuda damage the stone pillars with her Friction and Wicked Wheel abilities.\n\nAt about 75%% HP, Garuda will disappear for a few seconds. After re-appearing she will begin to cast Mistral Song. Get behind stone pillars and get out of her line of sight immediately. Anyone in her line of sight will be killed by the Mistral Song.\n\nAfter using Mistral Song, Garuda will spawn a group of adds named Razor Plumes. These adds will attempt to destroy the stone pillars. Pull DPS off of Garuda immediately to kill the adds. Use AoE abilities if possible.\n\nAt around half HP, Garuda will disappear again and re-appear on the other side of the map to use Mistral Song again. After using Mistral Song, Garuda will spawn another group of Razor Plume adds. This time the adds are scattered at the sides of the boss room. Focus fire them down one by one.\n\nAfter a bit, Garuda will vanish again and re-appear in the center of the room. She will then use her signature ability Aerial Blast. The amount of damage depends on the number of rocks that are still alive.",
+      "Strategy": "In the first phase, tank should pull Garuda to 1 edge of the boss room, away from the stone pillars. Ranged damage dealers and healers should spread out a bit to minimize the damage taken from Friction. While Slipstream does not have an indicator, it can still be dodged. Players should not let Garuda damage the stone pillars with her Friction and Wicked Wheel abilities.\n\nAt about 75% HP, Garuda will disappear for a few seconds. After re-appearing she will begin to cast Mistral Song. Get behind stone pillars and get out of her line of sight immediately. Anyone in her line of sight will be killed by the Mistral Song.\n\nAfter using Mistral Song, Garuda will spawn a group of adds named Razor Plumes. These adds will attempt to destroy the stone pillars. Pull DPS off of Garuda immediately to kill the adds. Use AoE abilities if possible.\n\nAt around half HP, Garuda will disappear again and re-appear on the other side of the map to use Mistral Song again. After using Mistral Song, Garuda will spawn another group of Razor Plume adds. This time the adds are scattered at the sides of the boss room. Focus fire them down one by one.\n\nAfter a bit, Garuda will vanish again and re-appear in the center of the room. She will then use her signature ability Aerial Blast. The amount of damage depends on the number of rocks that are still alive.",
       "Mechanics": [
         {
           "Name": "Slipstream",
