--- a/KikoGuide/Resources/Localization/Plugin/KikoGuide_Localizable.json
+++ b/KikoGuide/Resources/Localization/Plugin/KikoGuide_Localizable.json
@@ -280,7 +280,7 @@
     "description": "TGuideListTable.NoGuideData"
   },
   "GuideListTable.NoGuidesFilesDetected": {
-    "message": "No guide files were detected, please check your installation.",
+    "message": "No guide files were detected or loaded, please check your installation.",
     "description": "TGuideListTable.get_NoGuidesFilesDetected"
   },
   "IPC.Wotsit.OpenGuideList": {
