--- a/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/AllianceRaids/SyrcusTower.json
+++ b/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/AllianceRaids/SyrcusTower.json
@@ -1,9 +1,10 @@
 {
-    "Version": 0,
-    "Name": "Syrcus Tower",
-    "Difficulty": 0,
-    "Type": 2,
-    "Expansion": 0,
-    "Level": 50,
-    "UnlockQuestID": 67010
+  "Version": 0,
+  "Name": "Syrcus Tower",
+  "InternalName": "SyrcusTower",
+  "Difficulty": 0,
+  "Type": 2,
+  "Expansion": 0,
+  "Level": 50,
+  "UnlockQuestID": 67010
 }
