--- a/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/AllianceRaids/TheLabyrinthoftheAncients.json
+++ b/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/AllianceRaids/TheLabyrinthoftheAncients.json
@@ -1,9 +1,10 @@
 {
-    "Version": 0,
-    "Name": "The Labyrinth of the Ancients",
-    "Difficulty": 0,
-    "Type": 2,
-    "Expansion": 0,
-    "Level": 50,
-    "UnlockQuestID": 66738
+  "Version": 0,
+  "Name": "The Labyrinth of the Ancients",
+  "InternalName": "TheLabyrinthoftheAncients",
+  "Difficulty": 0,
+  "Type": 2,
+  "Expansion": 0,
+  "Level": 50,
+  "UnlockQuestID": 66738
 }
