--- a/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/AllianceRaids/TheWorldofDarkness.json
+++ b/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/AllianceRaids/TheWorldofDarkness.json
@@ -1,10 +1,13 @@
 {
-    "Version": 0,
-    "Name": "The World of Darkness",
-    "Difficulty": 0,
-    "Type": 2,
-    "Expansion": 0,
-    "Level": 50,
-    "UnlockQuestID": 66030,
-	  "TerritoryIDs":  [151]
+  "Version": 0,
+  "Name": "The World of Darkness",
+  "InternalName": "TheWorldofDarkness",
+  "Difficulty": 0,
+  "Type": 2,
+  "Expansion": 0,
+  "Level": 50,
+  "UnlockQuestID": 66030,
+  "TerritoryIDs": [
+    151
+  ]
 }
