--- a/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/Dungeons/HaukkeManor_Hard.json
+++ b/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/Dungeons/HaukkeManor_Hard.json
@@ -1,10 +1,13 @@
 {
   "Version": 1,
   "Name": "Haukke Manor",
+  "InternalName": "HaukkeManorHard",
   "Difficulty": 1,
   "Type": 0,
   "Expansion": 0,
   "Level": 50,
   "UnlockQuestID": 66751,
-  "TerritoryIDs": [350]
+  "TerritoryIDs": [
+    350
+  ]
 }
