--- a/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/Dungeons/PharosSirius.json
+++ b/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/Dungeons/PharosSirius.json
@@ -1,10 +1,13 @@
 {
   "Version": 1,
   "Name": "Pharos Sirius",
+  "InternalName": "PharosSirius",
   "Difficulty": 0,
   "Type": 0,
   "Expansion": 0,
   "Level": 50,
   "UnlockQuestID": 66744,
-  "TerritoryIDs": [160]
+  "TerritoryIDs": [
+    160
+  ]
 }
