--- a/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/Dungeons/Sastasha.json
+++ b/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/Dungeons/Sastasha.json
@@ -1,12 +1,15 @@
 {
   "Version": 1,
   "Name": "Sastasha",
+  "InternalName": "Sastasha",
   "Difficulty": 0,
   "Type": 0,
   "Expansion": 0,
   "Level": 15,
   "UnlockQuestID": 66211,
-  "TerritoryIDs": [1036],
+  "TerritoryIDs": [
+    1036
+  ],
   "Sections": [
     {
       "Type": 0,
