--- a/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/Dungeons/TheKeeperoftheLake.json
+++ b/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/Dungeons/TheKeeperoftheLake.json
@@ -1,12 +1,15 @@
 {
   "Version": 1,
   "Name": "The Keeper of the Lake",
+  "InternalName": "TheKeeperoftheLake",
   "Difficulty": 0,
   "Type": 0,
   "Expansion": 0,
   "Level": 50,
   "UnlockQuestID": 65902,
-  "TerritoryIDs": [150],
+  "TerritoryIDs": [
+    150
+  ],
   "Sections": [
     {
       "Type": 1,
