--- a/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/Dungeons/TheLostCityofAmdapor.json
+++ b/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/Dungeons/TheLostCityofAmdapor.json
@@ -1,12 +1,15 @@
 {
   "Version": 1,
   "Name": "The Lost City of Amdapor",
+  "InternalName": "TheLostCityofAmdapor",
   "Difficulty": 0,
   "Type": 0,
   "Expansion": 0,
   "Level": 50,
   "UnlockQuestID": 66925,
-  "TerritoryIDs": [363],
+  "TerritoryIDs": [
+    363
+  ],
   "Sections": [
     {
       "Type": 1,
