--- a/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/Dungeons/TheSunkenTempleofQarn_Hard.json
+++ b/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/Dungeons/TheSunkenTempleofQarn_Hard.json
@@ -1,12 +1,15 @@
 {
   "Version": 1,
   "Name": "The Sunken Temple of Qarn",
+  "InternalName": "TheSunkenTempleofQarnHard",
   "Difficulty": 1,
   "Type": 0,
   "Expansion": 0,
   "Level": 50,
   "UnlockQuestID": 65632,
-  "TerritoryIDs": [367],
+  "TerritoryIDs": [
+    367
+  ],
   "Sections": [
     {
       "Type": 1,
