--- a/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/Dungeons/TheTamTaraDeepcroft.json
+++ b/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/Dungeons/TheTamTaraDeepcroft.json
@@ -1,12 +1,15 @@
 {
   "Version": 1,
   "Name": "The Tam-Tara Deepcroft",
+  "InternalName": "TheTamTaraDeepcroft",
   "Difficulty": 0,
   "Type": 0,
   "Expansion": 0,
   "Level": 16,
   "UnlockQuestID": 66213,
-  "TerritoryIDs": [1037],
+  "TerritoryIDs": [
+    1037
+  ],
   "Sections": [
     {
       "Type": 2,
