--- a/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/Dungeons/TheTamTaraDeepcroft_Hard.json
+++ b/KikoGuide/Resources/Localization/Guide/v1/en/A Realm Reborn/Dungeons/TheTamTaraDeepcroft_Hard.json
@@ -1,12 +1,15 @@
 {
   "Version": 1,
   "Name": "The Tam-Tara Deepcroft",
+  "InternalName": "TheTamTaraDeepcroftHard",
   "Difficulty": 1,
   "Type": 0,
   "Expansion": 0,
   "Level": 50,
   "UnlockQuestID": 67060,
-  "TerritoryIDs": [373],
+  "TerritoryIDs": [
+    373
+  ],
   "Sections": [
     {
       "Type": 1,
